# xintrospect

./: README.md  meson.build
src/: ApplicationAboutDialog.vala  ApplicationCli.vala  ApplicationEventBus.vala  ApplicationGui.vala  ApplicationMenu.vala  AttributesView.vala  Consts.vala  EmptyViewWidget.vala  ExtraAtomTypes.vala  FormattedStreamWriter.vala  HeaderBar.vala  LiveWindowSelector.vala  MainPaneView.vala  MainWindow.vala  PropertiesView.vala  TreeViewBuilder.vala  View.vala  WidgetFactory.vala  WindowHierarchyTreeView.vala  WindowParentsTreeView.vala  WindowSelectorDialog.vala  WindowTreeView.vala  X11.vala  X11Util.vala  XWindowEnumerator.vala  XWindowPropertyEnumerator.vala  XWindowPropertyReader.vala  XWindowPropertyStringRenderer.vala  XWindowPropertyWidgetFactory.vala  Xcb.vala  main.vala  x11.vapi
